[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Blaster_Pistol.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Flash.gd" type="Script" id=3]
[ext_resource path="res://Assets/muzzleflash.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Materials/Muzzle.tres" type="Material" id=5]

[sub_resource type="CapsuleShape" id=4]
radius = 0.5
height = 1.5

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.5, 0.1, 0.5 )

[node name="Player" type="KinematicBody"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 1, 1 )
script = ExtResource( 2 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.3, 0 )
shape = SubResource( 4 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
shape = SubResource( 5 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
current = true

[node name="Blaster_Pistol" parent="Pivot" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, -0.35, -0.75 )

[node name="Shoot_CD" type="Timer" parent="Pivot/Blaster_Pistol"]
wait_time = 0.2
one_shot = true

[node name="Flash" type="Spatial" parent="Pivot/Blaster_Pistol"]
visible = false
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Pivot/Blaster_Pistol/Flash"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.175102, 0.159135, -0.746967 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )
material/1 = ExtResource( 5 )
material/2 = ExtResource( 5 )

[node name="OmniLight" type="OmniLight" parent="Pivot/Blaster_Pistol/Flash"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.119949, 0.159738, -0.707012 )
light_color = Color( 1, 0.980392, 0.498039, 1 )
light_energy = 100.0
omni_range = 3.0
omni_attenuation = 9.0

[node name="Timer" type="Timer" parent="Pivot/Blaster_Pistol/Flash"]
wait_time = 0.1
one_shot = true

[node name="RayCast" type="RayCast" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
enabled = true
cast_to = Vector3( 0, 0, -30 )

[connection signal="timeout" from="Pivot/Blaster_Pistol/Shoot_CD" to="." method="_on_Shoot_CD_timeout"]
[connection signal="timeout" from="Pivot/Blaster_Pistol/Flash/Timer" to="Pivot/Blaster_Pistol/Flash" method="_on_Timer_timeout"]
